--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CSS Responsive Web Design & Key Concepts</title>
+    <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet">
+    <title>CSS Responsive Web Design &amp; Key Concepts</title>
 </head>
 
 <body>
